# sound-syncer

./: .gitignore  Cargo.toml  config.json
src/: main.rs
