[package]
name = "sound-syncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
eyre = "0.6.8"
futures = "0.3.28"
reqwest = "0.11.22"
rss = "2.0.6"
serde = { version = "1.0.189", features = ["derive"] }
serde-lexpr = "0.1.3"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["process", "fs", "macros", "rt", "rt-multi-thread"] }
