[package]
name = "sound-syncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
eyre = "0.6.8"
filetime = "0.2.22"
futures = "0.3.28"
reqwest = "0.11.22"
rss = "2.0.6"
serde = { version = "1.0.189", features = ["derive"] }
serde-lexpr = "0.1.3"
serde_json = "1.0.107"
tempfile = "3.8.0"
tokio = { version = "1.33.0", features = ["process", "fs", "macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
